--- a/app/src/main/res/menu/bottom_nav.xml
+++ b/app/src/main/res/menu/bottom_nav.xml
@@ -9,4 +9,7 @@
     <item
         android:id="@+id/navigation_list"
         android:title="list" />
+    <item
+        android:id="@+id/navigation_blank"
+        android:title="blank" />
 </menu>
